# pokemon-list

./: README.md  pyproject.toml
scripts/: run_requirements.bat
src/: main.py
src/pokemon_list/: pokemon_list.py
src/pokemon_list/data/: pokemon_output.xlsx
